{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 66,
  "lineage": "2830d220-0b1b-129b-ea10-824166330a09",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e745eaa0201d363d",
            "arn": "arn:aws:ec2:ca-central-1:029742556433:instance/i-0e6ac790f0652a9b0",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6ac790f0652a9b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyTerraform_WebServer_Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08656ba9810120393",
            "private_dns": "ip-10-0-10-100.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.100",
            "public_ip": "15.156.199.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c43d70add069449c",
                "volume_size": 2,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ffdc49e4e49f9cc2",
            "tags": {
              "Name": "Nginx-Web-Server-Development"
            },
            "tags_all": {
              "Name": "Nginx-Web-Server-Development"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d049f7940a5a618a"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.my-app-sg",
            "aws_subnet.subnet-1",
            "aws_vpc.dev-vpc",
            "data.aws_ami.latest_linux_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Dev-vpc-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:029742556433:internet-gateway/igw-03da6527e5c46008f",
            "id": "igw-03da6527e5c46008f",
            "owner_id": "029742556433",
            "tags": {
              "Name": "IG-Dev-VPC-Development"
            },
            "tags_all": {
              "Name": "IG-Dev-VPC-Development"
            },
            "vpc_id": "vpc-0c344068658036132"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:029742556433:route-table/rtb-0273cfa5d85c110f6",
            "id": "rtb-0273cfa5d85c110f6",
            "owner_id": "029742556433",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03da6527e5c46008f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table-Dev-VPC-Development"
            },
            "tags_all": {
              "Name": "Route Table-Dev-VPC-Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c344068658036132"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Dev-vpc-ig",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0162789e6a449cb2d",
            "route_table_id": "rtb-0273cfa5d85c110f6",
            "subnet_id": "subnet-0ffdc49e4e49f9cc2"
          },
          "dependencies": [
            "aws_internet_gateway.Dev-vpc-ig",
            "aws_route_table.vpc-route-table",
            "aws_subnet.subnet-1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:029742556433:security-group/sg-0d049f7940a5a618a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d049f7940a5a618a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "99.237.20.63/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "myapp-sg",
            "name_prefix": "",
            "owner_id": "029742556433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Group-Dev-VPC-Development"
            },
            "tags_all": {
              "Name": "Security Group-Dev-VPC-Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c344068658036132"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:029742556433:subnet/subnet-0ffdc49e4e49f9cc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffdc49e4e49f9cc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029742556433",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1-Development"
            },
            "tags_all": {
              "Name": "Subnet-1-Development"
            },
            "vpc_id": "vpc-0c344068658036132"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:029742556433:vpc/vpc-0c344068658036132",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02bb4fa860b314904",
            "default_route_table_id": "rtb-0eb4de2c6e40eb849",
            "default_security_group_id": "sg-05ab4896ae84cb878",
            "dhcp_options_id": "dopt-03e36a8581417505e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c344068658036132",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb4de2c6e40eb849",
            "owner_id": "029742556433",
            "tags": {
              "Name": "VPC-Development"
            },
            "tags_all": {
              "Name": "VPC-Development"
            }
          }
        }
      ]
    }
  ]
}